@@ -1,3 +1,8 @@
+2004-06-08  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* weather.c: (weather_info_config_read): Merge fix for
+	bug #143869 from HEAD. Patch by Gareth Owen.
+
 2004-05-28  Gareth Owen  <gowen72@yahoo.com>
 
 	* weather.c: Free buffers on deleting weather info structure.
